# test_cmake

./: CMakeLists.txt  hello.h  main.cpp
